# MS_Thesis

./: CMakeLists.txt  ecdsa.cpp  falcon.cpp  ml_dsa.cpp  sphincs_benchmark.cpp  sphincs_fast.cpp  util.cpp  util.h
Objective Four/: generate_certs.py  http_client.py  http_server.py  http_test.py  tls_client.py  tls_run_all.py  tls_server.py  tsl_test.py
Objective One/: ecdsa.cpp  falcon.cpp  main.cpp  ml_dsa.cpp  readMe  sphincs_benchmark.cpp  sphincs_fast.cpp  util.cpp  util.h
Objective Three/: CMakeLists.txt  benchmark_runner.cpp  benchmark_runner.h  charts.py  hash_utils.cpp  hash_utils.h  main.cpp  mock.py  mock_simple_sphincs.py  plot.py  sizer.py  together.py  transaction_serializer.cpp  transaction_serializer.h  varint.cpp  varint.h
Objective Two/: CMakeLists.txt  ecdsa_falcon.cpp  ecdsa_mldsa.cpp  ecdsa_sphincs_robust.cpp  ecdsa_sphincs_simple.cpp  main.cpp  plots.py  readMe  util.cpp  util.h
charts/: grover.py  readMe
